<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_dashboard"
        android:title="@string/menu_dashboard"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_security"
        android:title="@string/menu_security"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:title="@string/menu_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_license"
        android:title="@string/menu_license"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_api_docs"
        android:title="@string/api_docs_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu>
